  * Fixed Replaces for mythtv-common
  * Added python and perl bindings as recommends for BE/FE
  * Fixes replaces in control.in for mythtv-common (LP: #676791)
  * Added bindings as recommends to FR and BE in control.in
  * Added Breaks mythtv-backend to mythtv-common (LP: #677206)
  * Added conflicts/replaces for mythplugins-dbg to mythtv-dbg

 -- Thomas Mashos <thomas@earth>  Thu, 18 Nov 2010 14:25:35 -0800

mythtv (1:0.24.0+fixes27162-0ubuntu1) natty; urgency=low

  [ Mario Limonciello ]
  * Drop 36_setgroups.  Been merged upstream.
  * Add upstart script into the packaging.  It's been dropped upstream.
    ref svn 24280 upstream.
  * Bump version to 0.24 fixes r27162
  * Refresh patches due to upstream changes:
    * Mythfilldatabase logging
    * Force dbus reboot/halt.
    * Default directories.
    * Python 2.6
    * proper shutdown behavior for ubuntu.
  * Drop 40_libudev.  Merged upstream.
  * Drop 09_perl_bindings_prefix.  Merged upstream.
  * debian/rules: cleanup deprecated configure options.
  * Install mythpreviewgen into mythtv-frontend (LP: #616083)
  * Remove faad support, no longer listed in configure, fixes FTBFS.
  * remove circular dependency.
  * Reduce zealousness in files cleaned in clean rule.
  * Remove qmake invocation.
  * Add depends on python-mysqldb
  * Install metadata to /usr/share/mythtv so it can be used by MNV.
    (LP: #624064)
  * Add a --list-missing option to make sure that all packaged files
    get installed, and the build fails otherwise.
  * Correct the missing locales and fonts.
  * Install python and perl directly into their appropriate directories.
  * Remove dummy libmyth-perl package.
  * Modify ubuntu shutdown behavior patch to only use dbus if commands fail.
  * Update shutdown patch for upstream recommendations.
  * Conflicts/Replaces on old libmyth package (LP: #665402)
  * Merge mythtv/mythplugins/myththemes source packages into one.
  * Add a new get-svn-source rule to use with mythbuntu-weekly-build.